# cfworker-scratchcard

./: .gitignore  package-lock.json  package.json  wrangler.toml
cloudrun/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
cloudrun/src/: index.ts  ws-card.ts
img2rgb/: README.md  pyproject.toml
img2rgb/img2rgb/: img2rgb.py
spa/: package-lock.json  package.json
spa/src/: App.css  App.tsx  scratchcard.tsx  worker.ts
src/: index.ts
