[tool.poetry]
name = "img2rgb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
isort = {extras = ["pyproject"], version = "^5.10.1"}
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.poetry.scripts]
img2rgb = "img2rgb.img2rgb:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
